<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="pl.lizardproject.qe2017.edititem.EditItemViewModel"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_padding">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nameHint">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/newItemEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.newItemName}"/>
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:paddingTop="@dimen/activity_padding"
                android:text="@string/categoryTitle"
                android:textColor="@color/colorAccent"
                android:textSize="11sp"/>
            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@{viewModel.categories}"
                android:selectedItemPosition="@={viewModel.newItemCategoryPosition}"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:paddingTop="@dimen/activity_padding"
                android:text="@string/priorityTitle"
                android:textColor="@color/colorAccent"
                android:textSize="11sp"/>
            <Spinner
                android:id="@+id/priority_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@{viewModel.priorities}"
                android:selectedItemPosition="@={viewModel.newItemPriorityPosition}"/>
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:onClick="@{viewModel::saveItemCommand}"
            android:src="@drawable/accept"
            app:useCompatPadding="true"/>
    </android.support.design.widget.CoordinatorLayout>
</layout>