<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="pl.lizardproject.qe2017.register.RegisterViewModel"/>
    </data>
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_padding">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usernameHint"
                app:errorEnabled="true"
                app:errorText="@{viewModel.errorText}">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/newUsernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{!viewModel.showSpinner}"
                    android:text="@={viewModel.username}"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordHint"
                app:errorEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/newPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{!viewModel.showSpinner}"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/registerButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:enabled="@{!viewModel.showSpinner}"
                android:onClick="@{viewModel::registerCommand}"
                android:text="@string/register"/>
        </LinearLayout>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="@{viewModel.showSpinner ? View.VISIBLE: View.GONE}"/>
    </android.support.design.widget.CoordinatorLayout>
</layout>