...
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:onClick="@{viewModel::onClickCommand}"
        android:paddingBottom="6dp"
        android:paddingTop="6dp">
        <TextView
            android:id="@+id/text"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@{viewModel.item.name}"
            android:textAppearance="@android:style/TextAppearance.Medium"
            app:layout_widthPercent="80%"/>

...
